--- a/W9_weather_ajax.html
+++ b/W9_weather_ajax.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Weather Application</title>
   <style>
     body {
@@ -59,26 +59,26 @@
       const weatherInfo = document.getElementById("weather-info");
       errorMessage.innerHTML = '';
       weatherInfo.innerHTML = '';
-      
+
       if (city === '') {
         errorMessage.innerHTML = "Please enter a city name.";
         return;
       }
 
-      // Fetch the local JSON file (weather data)
       const xhr = new XMLHttpRequest();
       xhr.open("GET", "weather_data.json", true);
-      xhr.onload = function() {
+      xhr.onload = function () {
         if (xhr.status === 200) {
           const data = JSON.parse(xhr.responseText);
-          const cityKey = Object.keys(data).find(key => key.toLowerCase() === city.toLowerCase());
-          if (cityKey) {
-            const cityWeather = data[cityKey];
+
+          const cityData = data.find(item => item.city.toLowerCase() === city.toLowerCase());
+
+          if (cityData) {
             weatherInfo.innerHTML = `
-              <h3>Weather in ${cityKey}</h3>
-              <p>Temperature: ${cityWeather.temperature}</p>
-              <p>Humidity: ${cityWeather.humidity}</p>
-              <p>Conditions: ${cityWeather.conditions}</p>
+              <h3>Weather in ${cityData.city}</h3>
+              <p>Temperature: ${cityData.temperature}</p>
+              <p>Humidity: ${cityData.humidity}</p>
+              <p>Conditions: ${cityData.conditions}</p>
             `;
           } else {
             errorMessage.innerHTML = `Weather data for "${city}" is not available.`;
@@ -87,7 +87,7 @@
           errorMessage.innerHTML = "Error fetching weather data.";
         }
       };
-      xhr.onerror = function() {
+      xhr.onerror = function () {
         errorMessage.innerHTML = "Error fetching weather data.";
       };
       xhr.send();
