--- a/W10_todolist_ajax.html
+++ b/W10_todolist_ajax.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>To-Do List with AJAX</title>
+  <title>Static To-Do List</title>
   <style>
     body { font-family: Arial; background: #f4f4f4; padding: 20px; }
     .todo-container {
@@ -14,16 +14,6 @@
       border-radius: 8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    input[type="text"] {
-      width: 80%;
-      padding: 10px;
-      font-size: 16px;
-    }
-    button {
-      padding: 10px;
-      font-size: 16px;
-      cursor: pointer;
-    }
     ul { list-style: none; padding-left: 0; }
     li {
       display: flex;
@@ -32,104 +22,50 @@
       padding: 8px 0;
       border-bottom: 1px solid #ddd;
     }
-    li.done span { text-decoration: line-through; color: gray; }
-    .actions { display: flex; gap: 5px; }
+    li.done span {
+      text-decoration: line-through;
+      color: gray;
+    }
   </style>
 </head>
 <body>
 
   <div class="todo-container">
-    <h2>To-Do List</h2>
-    <input type="text" id="taskInput" placeholder="Add a new task..." />
-    <button onclick="addTask()">Add</button>
+    <h2>Static To-Do List</h2>
     <ul id="taskList"></ul>
   </div>
 
   <script>
-    const api = 'http://localhost:3000/tasks';
-    let tasks = [];
-
-    function ajax(method, url, data, callback) {
+    function loadTasks() {
       const xhr = new XMLHttpRequest();
-      xhr.open(method, url, true);
-      xhr.setRequestHeader("Content-Type", "application/json");
-      xhr.onload = () => callback(xhr.status, xhr.responseText);
-      xhr.send(data ? JSON.stringify(data) : null);
+      xhr.open("GET", "to-do.json", true);
+      xhr.onload = function () {
+        if (xhr.status === 200) {
+          const tasks = JSON.parse(xhr.responseText);
+          renderTasks(tasks);
+        } else {
+          alert("Could not load tasks.");
+        }
+      };
+      xhr.send();
     }
 
-    function fetchTasks() {
-      ajax('GET', api, null, (status, res) => {
-        tasks = JSON.parse(res);
-        renderTasks();
-      });
-    }
+    function renderTasks(tasks) {
+      const list = document.getElementById("taskList");
+      list.innerHTML = "";
+      tasks.forEach(task => {
+        const li = document.createElement("li");
+        if (task.done) li.classList.add("done");
 
-    function renderTasks() {
-      const list = document.getElementById('taskList');
-      list.innerHTML = '';
-      tasks.forEach((task, index) => {
-        const li = document.createElement('li');
-        li.className = task.done ? 'done' : '';
-
-        const span = document.createElement('span');
+        const span = document.createElement("span");
         span.textContent = task.text;
 
-        const checkbox = document.createElement('input');
-        checkbox.type = 'checkbox';
-        checkbox.checked = task.done;
-        checkbox.onchange = () => toggleDone(index);
-
-        const editBtn = document.createElement('button');
-        editBtn.textContent = '✏️';
-        editBtn.onclick = () => editTask(index);
-
-        const deleteBtn = document.createElement('button');
-        deleteBtn.textContent = '🗑️';
-        deleteBtn.onclick = () => deleteTask(index);
-
-        const actionsDiv = document.createElement('div');
-        actionsDiv.className = 'actions';
-        actionsDiv.appendChild(editBtn);
-        actionsDiv.appendChild(deleteBtn);
-
-        li.appendChild(checkbox);
         li.appendChild(span);
-        li.appendChild(actionsDiv);
         list.appendChild(li);
       });
     }
 
-    function addTask() {
-      const input = document.getElementById('taskInput');
-      const text = input.value.trim();
-      if (text !== '') {
-        const newTask = { text, done: false };
-        ajax('POST', api, newTask, () => {
-          fetchTasks();
-          input.value = '';
-        });
-      }
-    }
-
-    function deleteTask(index) {
-      ajax('DELETE', `${api}/${index}`, null, () => fetchTasks());
-    }
-
-    function editTask(index) {
-      const newText = prompt("Update task:", tasks[index].text);
-      if (newText !== null && newText.trim() !== '') {
-        tasks[index].text = newText.trim();
-        ajax('PUT', `${api}/${index}`, tasks[index], () => fetchTasks());
-      }
-    }
-
-    function toggleDone(index) {
-      tasks[index].done = !tasks[index].done;
-      ajax('PUT', `${api}/${index}`, tasks[index], () => fetchTasks());
-    }
-
-    // Initial load
-    fetchTasks();
+    loadTasks(); // Load when page loads
   </script>
 </body>
 </html>
